--- a/paginas/inicio.html
+++ b/paginas/inicio.html
@@ -48,7 +48,7 @@
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
           <div class="col-md-4 d-flex align-items-center">
-            <span class="mb-3 mb-md-0 text-dark">&copy; 2022 Coffee Company.</span>
+            <span class="mb-3 mb-md-0 text-dark">&copy; 2022 Pizzeria Erbey.</span>
           </div>
             <div class="redes-sociales justify-content-between">        
             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-twitter m-2" viewBox="0 0 16 16">
