arreglo botones formulario

--- a/paginas/contactanos.html
+++ b/paginas/contactanos.html
@@ -43,6 +43,7 @@
     <h2 class="h2-contacto">Dejanos tu comentario</h2>
     <section>
         <div class="container">
+            <form action="">
             <div class="col-lg-8 offset-lg-2">
                 <div class="mb-3">                    
                     <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Nombre">
@@ -79,6 +80,7 @@
                         <button type="reset" class="btn btn-primary">Reiniciar</button>
                     </div>
                 </div>
+            </form>
             </div>
         </div>
     </section>    
