galeria de fotos

--- a/paginas/locales.html
+++ b/paginas/locales.html
@@ -40,8 +40,40 @@
             </div>
           </nav>       
     </header>
-    <section>
-  
+    <section id="galeria" class="container">
+      <div class="text-center pt-5">
+        <h3>Galeria</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis eius natus aperiam, nulla nesciunt commodi libero ducimus. Non sed sapiente facilis culpa iste, perferendis eum eligendi? Ratione ipsam blanditiis perspiciatis.</p>      
+        <div class="row">
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <img src="../fotos/empanadasuno.jpg" alt="">
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <img src="../fotos/foodcinco.jpg" alt="">
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <img src="../fotos/pizzacuatro.jpg" alt="">
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <img src="../fotos/pizzados.jpg" alt="">
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <img src="../fotos/seis.jpg" alt="">
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <img src="../fotos/pizzatres.jpg" alt="">
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <img src="../fotos/pizzados.jpg" alt="">
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <img src="../fotos/seis.jpg" alt="">
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <img src="../fotos/pizzatres.jpg" alt="">
+          </div>
+        </div>
+      </div>      
     </section>
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
