arreglo para entrega sass y seo

--- a/paginas/inicio.html
+++ b/paginas/inicio.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quienes Somos</title>
-    <!-- CSS only -->    
+    <meta name="keywords" content="pizza, Erbey, argentina, pizzeria, gastronomia, empanadas, restaurante, muzzarella, pizza argentina, pizzeria tradicional"/>
+    <meta name="description" content="Tradición desde 1949... Julio y Carlos llegaron a la Republica Argentina desde Italia y se radicaron en Quilmes. Durante décadas realizaron la mejor pizza Argentina."/>
+    <title>Quienes Somos</title>       
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../style.css">
@@ -40,10 +41,27 @@
             </div>
           </nav>       
     </header>   
-    <section>
-        <h2>Nuestra Historia</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed voluptates aliquid cupiditate eligendi vitae modi, natus, maxime dolorum ratione omnis reprehenderit non quas alias eaque rerum blanditiis tempore quibusdam quisquam.</p>
-        <img src="../fotos/erbey.jpg" alt="Erbey" width="400" height="267">
+    <section id="historia">
+      <h2>Nuestra Historia <br>¿Quienes Somos?</h2>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 d-flex align-items-center">
+            <p class="w95 just">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, consequuntur! Expedita, obcaecati recusandae. Beatae reiciendis saepe, itaque, cumque, officiis et recusandae fuga accusantium ipsa eligendi natus suscipit blanditiis. Ut, suscipit. <br>
+              <br>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex voluptate fugit magnam voluptatum quia provident unde voluptas rerum culpa laboriosam, enim dolor ab reiciendis cupiditate tenetur, dicta consequatur, at deleniti. <br>
+              <br>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum, est magnam at natus non libero eos voluptas a quae recusandae id nostrum vero sed error ipsam praesentium distinctio obcaecati! Voluptas? <br>
+              <br>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui eveniet dolore veritatis, numquam optio illum ullam ipsum, aliquam similique ratione animi. Est porro doloremque quos sunt non praesentium quis totam. <br>
+              <br>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo in, obcaecati quam iure soluta illo, vel, quo numquam enim excepturi autem? Sapiente quae at sint esse modi, ad perspiciatis soluta!
+            </p>
+          </div>
+          <div class="col-lg-6 mt-5 d-flex justify-content-center">
+            <img src="../fotos/fotohistoria.png" alt="">
+          </div>
+        </div>
+      </div>
     </section>
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
