--- a/paginas/menu.html
+++ b/paginas/menu.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu</title>
-    <!-- CSS only -->    
+    <meta name="keywords" content="pizza, Erbey, argentina, pizzeria, gastronomia, empanadas, restaurante, muzzarella, pizza argentina, pizzeria tradicional"/>
+    <meta name="description" content="Un menu repleto de lo mejor de dos culturas, grandes promociones y bebidas, todo al alcance de nuestros clientes."/>
+    <title>Menu</title>     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../style.css">
@@ -41,6 +42,7 @@
           </nav>       
     </header>    
     <h2 class="h2-menu">Nuestro Menu</h2>
+    <p class="text-menu">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ex enim cum iste? Explicabo quod labore vero praesentium. Accusamus velit vel repudiandae earum at et eaque voluptate voluptatibus accusantium id.</p>
     <section id="carta">
         <div class="pizzas menu">
             <h3>Pizzas</h3>
