arreglo del menu

--- a/paginas/menu.html
+++ b/paginas/menu.html
@@ -42,7 +42,7 @@
           </nav>       
     </header>    
     <h2 class="h2-menu">Nuestro Menu</h2>
-    <p class="text-menu">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ex enim cum iste? Explicabo quod labore vero praesentium. Accusamus velit vel repudiandae earum at et eaque voluptate voluptatibus accusantium id.</p>
+    <p class="text-menu">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ex enim cum iste? Explicabo quod labore vero praesentium. Accusamus velit vel repudiandae earum at et eaque voluptate voluptatibus accusantium idl.</p>
     <section id="carta">
         <div class="pizzas menu">
             <h3>Pizzas</h3>
