--- a/paginas/locales.html
+++ b/paginas/locales.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="pizza, Erbey, argentina, pizzeria, gastronomia, empanadas, restaurante, muzzarella, pizza argentina, pizzeria tradicional"/>
     <meta name="description" content="Si todo esto no fue suficientes aqui podes apreciar lo mejor del local, sus deliciosas pizzas y lo mejor de la cultura de la empanada."/>
-    <title>Locales</title>     
+    <title>Galeria</title>     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../style.css">
@@ -43,7 +43,7 @@
     </header>
     <section id="galeria" class="container">
       <div class="text-center pt-5">
-        <h3>Galeria</h3>
+        <h2>Galeria</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis eius natus aperiam, nulla nesciunt commodi libero ducimus. Non sed sapiente facilis culpa iste, perferendis eum eligendi? Ratione ipsam blanditiis perspiciatis.</p>      
         <div class="row">
           <div class="col-lg-4 col-md-6 col-sm-12">
@@ -71,7 +71,7 @@
             <img src="../fotos/ocho.jpg" alt="">
           </div>
           <div class="col-lg-4 col-md-6 col-sm-12">
-            <img src="../fotos/pizzatres.jpg" alt="">
+            <img src="../fotos/nueve.jpg" alt="">
           </div>
         </div>
       </div>      
