arreglo de menu en branch

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto:wght@300&family=Rubik+Bubbles&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Oswald&family=Roboto:wght@300&family=Rubik+Marker+Hatch&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -25,13 +25,13 @@
               <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="./paginas/inicio.html">Somos</a>
+                    <a class="nav-link" aria-current="page" href="./paginas/somos.html">Somos</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./paginas/menu.html">Menu</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./paginas/locales.html">Galeria</a>
+                    <a class="nav-link" href="./paginas/galeria.html">Galeria</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./paginas/contactanos.html">Contactanos</a>
@@ -45,7 +45,7 @@
         <h1>Las Mejores Pizzas
             <br>Argentinas
         </h1>
-        <a href="paginas/locales.html">Pruébalas</a>
+        <a href="paginas/contactanos.html">Pruébalas</a>
     </section>
     <section id="somos">
         <div class="container">
@@ -54,7 +54,7 @@
                     <div class="local">
                         <div class="texto column">
                         <h2>Somos una Pizzería Tradicional</h2>
-                        <p class="mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet adipisci, mollitia a libero itaque tempora, eum atque architecto repellendus temporibus dolorem iusto ipsa rem ipsum quam enim, obcaecati qui ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet adipisci, mollitia a libero itaque tempora, eum atque architecto repellendus temporibus dolorem iusto ipsa rem ipsum quam enim, obcaecati qui ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet adipisci, mollitia a libero itaque tempora, eum atque architecto repellendus temporibus dolorem iusto ipsa rem ipsum quam enim, obcaecati qui ad?</p>
+                        <p class="mt-4">La Pizzería Erbey abre sus puertas el 6 de Junio de 1963. Creado por Carlo Rossi, ingeniero de profesión y cocinero autodidacta, después de un inspirador viaje a Italia donde se maravilla con la popular pizza al taglio (pizza al corte, en italiano) y su versatilidad.</p>
                         </div>            
                     </div>
                     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
