--- a/paginas/contactanos.html
+++ b/paginas/contactanos.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto:wght@300&family=Rubik+Bubbles&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Oswald&family=Roboto:wght@300&family=Rubik+Marker+Hatch&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -25,13 +25,13 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="inicio.html">Somos</a>
+                    <a class="nav-link" aria-current="page" href="somos.html">Somos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="menu.html">Menu</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="locales.html">Galeria</a>
+                    <a class="nav-link" href="galeria.html">Galeria</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contactanos.html">Contactanos</a>
@@ -41,7 +41,7 @@
             </div>
         </nav>       
     </header>
-    <h2 class="h2-contacto">Dejanos tu comentario</h2>
+    <h2 class="h2-contacto">Dejanos tu comentario</h2>   
     <section>
         <div class="container">
             <form action="">
