--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="pizza, Erbey, argentina, pizzeria, gastronomia, empanadas, restaurante, muzzarella, pizza argentina, pizzeria tradicional"/>
-    <meta name="description" content="Tradición desde 1949... Julio y Carlos llegaron a la Republica Argentina desde Italia y se radicaron en Quilmes. Durante décadas realizaron la mejor pizza Argentina."/>
-    <title>Quienes Somos</title>       
+    <meta name="description" content="Si todo esto no fue suficientes aqui podes apreciar lo mejor del local, sus deliciosas pizzas y lo mejor de la cultura de la empanada."/>
+    <title>Galeria</title>     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto:wght@300&family=Rubik+Bubbles&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Oswald&family=Roboto:wght@300&family=Rubik+Marker+Hatch&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="menu.html">Menu</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="locales.html">Galeria</a>
+                    <a class="nav-link" href="galeria.html">Galeria</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="contactanos.html">Contactanos</a>
@@ -40,28 +40,41 @@
               </div>
             </div>
           </nav>       
-    </header>   
-    <section id="historia">
-      <h2>Nuestra Historia <br>¿Quienes Somos?</h2>
-      <div class="container">
+    </header>
+    <section id="galeria" class="container">
+      <div class="text-center">
+        <h2 class="titulo-galeria">Galeria</h2>
+        <p>Conoce más sobre nosotros, te dejamos imagenes de nuestros productos, nuestro local y nuestra historia</p>      
         <div class="row">
-          <div class="col-lg-6 d-flex align-items-center">
-            <p class="w95 just">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel, consequuntur! Expedita, obcaecati recusandae. Beatae reiciendis saepe, itaque, cumque, officiis et recusandae fuga accusantium ipsa eligendi natus suscipit blanditiis. Ut, suscipit. <br>
-              <br>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex voluptate fugit magnam voluptatum quia provident unde voluptas rerum culpa laboriosam, enim dolor ab reiciendis cupiditate tenetur, dicta consequatur, at deleniti. <br>
-              <br>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum, est magnam at natus non libero eos voluptas a quae recusandae id nostrum vero sed error ipsam praesentium distinctio obcaecati! Voluptas? <br>
-              <br>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui eveniet dolore veritatis, numquam optio illum ullam ipsum, aliquam similique ratione animi. Est porro doloremque quos sunt non praesentium quis totam. <br>
-              <br>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo in, obcaecati quam iure soluta illo, vel, quo numquam enim excepturi autem? Sapiente quae at sint esse modi, ad perspiciatis soluta!
-            </p>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <img src="../fotos/empanadasuno.jpg" alt="">
           </div>
-          <div class="col-lg-6 mt-5 d-flex justify-content-center">
-            <img src="../fotos/fotohistoria.png" alt="">
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <img src="../fotos/foodcinco.jpg" alt="">
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <img src="../fotos/pizzacuatro.jpg" alt="">
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <img src="../fotos/pizzados.jpg" alt="">
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <img src="../fotos/seis.jpg" alt="">
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <img src="../fotos/pizzatres.jpg" alt="">
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <img src="../fotos/siete.jpg" alt="">
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <img src="../fotos/ocho.jpg" alt="">
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <img src="../fotos/nueve.jpg" alt="">
           </div>
         </div>
-      </div>
+      </div>      
     </section>
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
