--- a/paginas/menu.html
+++ b/paginas/menu.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto:wght@300&family=Rubik+Bubbles&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Oswald&family=Roboto:wght@300&family=Rubik+Marker+Hatch&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -25,13 +25,13 @@
               <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="inicio.html">Somos</a>
+                    <a class="nav-link" aria-current="page" href="somos.html">Somos</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="menu.html">Menu</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="locales.html">Galeria</a>
+                    <a class="nav-link" href="galeria.html">Galeria</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="contactanos.html">Contactanos</a>
@@ -41,57 +41,258 @@
             </div>
           </nav>       
     </header>    
-    <h2 class="h2-menu">Nuestro Menu</h2>
-    <p class="text-menu">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ex enim cum iste? Explicabo quod labore vero praesentium. Accusamus velit vel repudiandae earum at et eaque voluptate voluptatibus accusantium idl.</p>
-    <section id="carta">
-        <div class="pizzas menu">
-            <h3>Pizzas</h3>
-            <ul>
-                <li>Muzzarella $1150</li>
-                <li>Muzzarella con Jamon $1300</li>
-                <li>Fugazza $1100</li>
-                <li>Napolitana $1400</li>
-                <li>Calabresa $1450</li>
-                <li>Roquefort $1450</li>
-                <li>Especial (Jamon y Morrones) $1550</li>
-                <li>Faina $90</li>
-            </ul>
+    <section class="wrap">
+      <h2>Nuestro Menu</h2>
+      <p></p>
+      <div class="wrap-title-section">
+        <h3>Pizzas</h3>
+      </div>
+      <div class="column-2 carta">
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="../fotos/pizza-muzarella.png" alt="Muzza">
+          </div>
+          <div class="title-plato-carta">
+            <h4 class="name sasha">Pizza de muzzarella</h4>
+            <p class="parrafo sasha">Pizza Clasica, tomate y muzzarella</p>
+          </div>
+          <div class="precio-plato-carta">
+            <span>$99</span>
+          </div>
         </div>
-        <div class="empanada menu">
-            <h3>Empanadas</h3>
-            <ul>
-                <li>Carne Suave $180</li>
-                <li>Carne Picante $180</li>
-                <li>Pollo $180</li>
-                <li>Jamon y Queso $180</li>
-                <li>Humita $180</li>
-                <li>Cebolla y Queso $180</li>
-                <li>Roquefort $180</li>
-                <li>Verdura $180</li>
-            </ul>
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="../fotos/pizza-jamonc.png" alt="JamónC">
+          </div>
+          <div class="title-plato-carta">
+            <h4>Pizza de Muzzarella con Jamón</h4>
+            <p>Variante de la clasica con Jamón</p>
+          </div>
+          <div class="precio-plato-carta">
+            <span>$99</span>
+          </div>
         </div>
-        <div class="bebidas menu">
-            <h3>Bebidas</h3>
-            <ul>
-                <li>Coca Cola 1.5L $350</li>
-                <li>Sprite 1.5L $350</li>
-                <li>Cerveza Quilmes $260</li>
-                <li>Coca Cola 2L $500</li>
-                <li>Sprite 2L $550</li>
-                <li>Agua Mineral $300</li>
-            </ul>
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="../fotos/pizza-fugazza.png" alt="Fuga">
+          </div>
+          <div class="title-plato-carta">
+            <h4>Pizza Fugazzeta</h4>
+            <p>Muzzarella, cebolla y aceitunas negras</p>
+          </div>
+          <div class="precio-plato-carta">
+            <span>$99</span>
+          </div>
         </div>
-        <div class="promos menu"> 
-            <h3>Promociones</h3>
-            <ul>
-                <li>Docena de Empanadas $1960</li>
-                <li>Media docena de Empanadas $960</li>
-                <li>Dos Muzzarella $2100</li>
-                <li>Una Especial + 6 empanadas $2450</li>
-                <li>Una Especial + 12 empanadas $3450</li>
-                <li>Una Especial + Muzzarella $2450</li>
-            </ul>
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="../fotos/pizza-napo.png" alt="Napo">
+          </div>
+          <div class="title-plato-carta">
+            <h4>Pizza Napolitana</h4>
+            <p>Salsa de tomate, muzzarella, jamón, rodajas de tomate y aceitunas.</p>
+          </div>
+          <div class="precio-plato-carta">
+            <span>$99</span>
+          </div>
         </div>
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="../fotos/pizza-roque.png" alt="Roque">
+          </div>
+          <div class="title-plato-carta">
+            <h4>Pizza de Roquefort</h4>
+            <p>Salsa de tomate, roquefort, muzzarella, orégano y aceitunas.</p>
+          </div>
+          <div class="precio-plato-carta">
+            <span>$99</span>
+          </div>
+        </div>
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="../fotos/pizza-jamon.png" alt="Jamón">
+          </div>
+          <div class="title-plato-carta">
+            <h4>Pizza con Jamón Crudo</h4>
+            <p>Salsa de tomate, muzzarella, jamón crudo y aceitunas.</p>
+          </div>
+          <div class="precio-plato-carta">
+            <span>$99</span>
+          </div>
+        </div>
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="../fotos/pizza-calabresa.png" alt="Calabresa">
+          </div>
+          <div class="title-plato-carta">
+            <h4>Pizza Calabresa</h4>
+            <p>Salsa de tomate, muzzarella y longaniza.</p>
+          </div>
+          <div class="precio-plato-carta">
+            <span>$99</span>
+          </div>
+        </div>
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="../fotos/pizza-palmitos.png" alt="Palmitos">
+          </div>
+          <div class="title-plato-carta">
+            <h4>Pizza con Palmitos</h4>
+            <p>Salsa de tomate, muzzarella, palmitos, salsa golf y aceitunas.</p>
+          </div>
+          <div class="precio-plato-carta">
+            <span>$99</span>
+          </div>
+        </div>
+      </div>
+      <div class="wrap-title-section">
+        <h3>Empanadas</h3>
+      </div>
+      <div class="column-2 carta">
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="../fotos/empanada1.png" alt="">
+          </div>
+          <div class="title-plato-carta">
+            <h4>Empanada de carne suave</h4>
+            <p>Carne picada, cebolla, huevo, morrón rojo y verdeo.</p>
+          </div>
+          <div class="precio-plato-carta">
+            <span>$99</span>
+          </div>
+        </div>
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="../fotos/empanadas2.jpg" alt="">
+          </div>
+          <div class="title-plato-carta">
+            <h4>Empanada de jamón y queso</h4>
+            <p>Jamón cocido y muzzarella.</p>
+          </div>
+          <div class="precio-plato-carta">
+            <span>$99</span>
+          </div>
+        </div>
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="../fotos/empanadas3.jpg" alt="">
+          </div>
+          <div class="title-plato-carta">
+            <h4>Empanada humita</h4>
+            <p>Choclo amarillo, cebolla, salsa blanca y queso reggianito.</p>
+          </div>
+          <div class="precio-plato-carta">
+            <span>$99</span>
+          </div>
+        </div>
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="../fotos/empanadas4.png" alt="">
+          </div>
+          <div class="title-plato-carta">
+            <h4>Empanada de pollo</h4>
+            <p>Pollo, cebolla, huevo, verdeo y morrón rojo.</p>
+          </div>
+          <div class="precio-plato-carta">
+            <span>$99</span>
+          </div>
+        </div>
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="../fotos/empanadas6.png" alt="">
+          </div>
+          <div class="title-plato-carta">
+            <h4>Empanada integral de zapallo</h4>
+            <p>Zapallo, choclo y muzzarella.</p>
+          </div>
+          <div class="precio-plato-carta">
+            <span>$99</span>
+          </div>
+        </div>
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="../fotos/empanadas7.png" alt="">
+          </div>
+          <div class="title-plato-carta">
+            <h4>Empanada de verduras</h4>
+            <p>Acelga, cebolla, salsa blanca y queso reggianito.</p>
+          </div>
+          <div class="precio-plato-carta">
+            <span>$99</span>
+          </div>
+        </div>
+      </div>
+      <div class="wrap-title-section">
+        <h3>Bebidas</h3>
+      </div>
+      <div class="column-2 carta">
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="../fotos/coca-cola.png" alt="">
+          </div>
+          <div class="title-plato-carta">
+            <h4>Coca-Cola 2.5L</h4>            
+          </div>
+          <div class="precio-plato-carta">
+            <span>$99</span>
+          </div>
+        </div>
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="../fotos/sprite.png" alt="">
+          </div>
+          <div class="title-plato-carta">
+            <h4>Sprite 2.5L</h4>            
+          </div>
+          <div class="precio-plato-carta">
+            <span>$99</span>
+          </div>
+        </div>
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="../fotos/quilmes.png" alt="">
+          </div>
+          <div class="title-plato-carta">
+            <h4>Cerveza Quilmes 1L</h4>            
+          </div>
+          <div class="precio-plato-carta">
+            <span>$99</span>
+          </div>
+        </div>
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="../fotos/aquarius.png" alt="">
+          </div>
+          <div class="title-plato-carta">
+            <h4>Aquarius 1.5L</h4>            
+          </div>
+          <div class="precio-plato-carta">
+            <span>$99</span>
+          </div>
+        </div>
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="../fotos/fanta.png" alt="">
+          </div>
+          <div class="title-plato-carta">
+            <h4>Fanta 2.5L</h4>            
+          </div>
+          <div class="precio-plato-carta">
+            <span>$99</span>
+          </div>
+        </div>
+        <div class="plato-carta">
+          <div class="img-plato-carta">
+            <img src="../fotos/pepsi.png" alt="">
+          </div>
+          <div class="title-plato-carta">
+            <h4>Pepsi 2.5L</h4>            
+          </div>
+          <div class="precio-plato-carta">
+            <span>$99</span>
+          </div>
+        </div>
+      </div>
     </section>
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
