--- a/paginas/somos.html
+++ b/paginas/somos.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="pizza, Erbey, argentina, pizzeria, gastronomia, empanadas, restaurante, muzzarella, pizza argentina, pizzeria tradicional"/>
-    <meta name="description" content="Si todo esto no fue suficientes aqui podes apreciar lo mejor del local, sus deliciosas pizzas y lo mejor de la cultura de la empanada."/>
-    <title>Galeria</title>     
+    <meta name="description" content="Tradición desde 1949... Julio y Carlos llegaron a la Republica Argentina desde Italia y se radicaron en Quilmes. Durante décadas realizaron la mejor pizza Argentina."/>
+    <title>Quienes Somos</title>       
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto:wght@300&family=Rubik+Bubbles&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Oswald&family=Roboto:wght@300&family=Rubik+Marker+Hatch&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -25,13 +25,13 @@
               <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="inicio.html">Somos</a>
+                    <a class="nav-link" aria-current="page" href="somos.html">Somos</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="menu.html">Menu</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="locales.html">Galeria</a>
+                    <a class="nav-link" href="galeria.html">Galeria</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="contactanos.html">Contactanos</a>
@@ -40,41 +40,24 @@
               </div>
             </div>
           </nav>       
-    </header>
-    <section id="galeria" class="container">
-      <div class="text-center pt-5">
-        <h2>Galeria</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis eius natus aperiam, nulla nesciunt commodi libero ducimus. Non sed sapiente facilis culpa iste, perferendis eum eligendi? Ratione ipsam blanditiis perspiciatis.</p>      
+    </header>   
+    <section id="historia">
+      <h2>Nuestra Historia <br>¿Quienes Somos?</h2>
+      <div class="container">
         <div class="row">
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <img src="../fotos/empanadasuno.jpg" alt="">
+          <div class="col-lg-6 d-flex align-items-center">
+            <p class="w95 just">Erbey, tradicional Pizzería de Buenos Aires, fue fundada en 1963 por Carlos Rossi. Durante 40 años recibió a importantes figuras del ámbito deportivo y artístico de nuestro país en su local del barrio de Belgrano. La casa ofrece una gran variedad de pizzas a la piedra elaboradas en el momento en horno a leña empanadas artesanales y fainá.<br>
+            <br>
+            Algunas de las especialidades de la casa son La Fugazzeta: muzzarella, cebolla y aceitunas negras y la Pizza con Jamón Crudo: Salsa de tomate, muzzarella, jamón crudo y aceitunas. Sin olvidarse de la Muzzarella y la Napolitana ésta con abundante ajo y hojas de albahaca. La ambientación es muy característica: todas las paredes están adornadas con cuadros, banderas, fotos y antigüedades relacionadas con el deporte de nuestro país, principalmente el fútbol. Podrán encontrar imágenes y recortes periodísticos que relatan gran parte de la historia del deporte argentino y sus protagonistas. En Erbey podrá disfrutar de la mejor pizza a la piedra, en un ambiente familiar.<br>
+            <br>
+            Ahora en el Barrio de Palermo, vas a poder disfrutar de nuestras pizzas, rodeado de los mejores recuerdos.
+            </p>
           </div>
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <img src="../fotos/foodcinco.jpg" alt="">
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <img src="../fotos/pizzacuatro.jpg" alt="">
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <img src="../fotos/pizzados.jpg" alt="">
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <img src="../fotos/seis.jpg" alt="">
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <img src="../fotos/pizzatres.jpg" alt="">
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <img src="../fotos/siete.jpg" alt="">
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <img src="../fotos/ocho.jpg" alt="">
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-12">
-            <img src="../fotos/nueve.jpg" alt="">
+          <div class="col-lg-6 mt-5 d-flex justify-content-center">
+            <img src="../fotos/fotohistoria.png" alt="">
           </div>
         </div>
-      </div>      
+      </div>
     </section>
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
